# server/specs/openapi.yaml
@@ -18,16 +18,16 @@ paths:
                 items:
                   $ref: '#/components/schemas/Video'
               examples:
-                got several videos:
+                several videos:
                   value: "[{ id: 'video-AAA', title: 'Top 10 best animes' }, { id: 'video-BBB', title: 'Top 10 best movies' }]"
-                got no result:
+                no result:
                   value: "[]"
       tags:
         - database
   /providers/videos:
     get:
       summary: Get all new videos from providers
-      description: Get all new videos from providers like YouTube.
+      description: Get all new videos from providers like YouTube, based on subscribed channels (saved in the database).
       operationId: 'getVideosFromProviders'
       responses:
         '200':
@@ -39,9 +39,37 @@ paths:
                 items:
                   $ref: '#/components/schemas/Video'
               examples:
-                fetched several videos:
+                several videos:
                   value: "[{ id: 'video-AAA', title: 'Top 10 best animes' }, { id: 'video-BBB', title: 'Top 10 best movies' }]"
-                fetched no video:
+                no video:
+                  value: "[]"
+      tags:
+        - providers
+  /providers/channel/{channelName}:
+    get:
+      summary: Search a channel with its name on all providers
+      description: Search a channel with its name on all providers like YouTube.
+      operationId: 'searchChannelFromProviders'
+      parameters:
+        - name: channelName
+          description: Name of the channel to search.
+          in: path
+          required: true
+          schema:
+            type: string
+      responses:
+        '200':
+          description: "Success: all channels matching the wanted name."
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref: '#/components/schemas/Channel'
+              examples:
+                several channels:
+                  value: "[{ id: 'channel-AAA', title: 'My best channel' }, { id: 'channel-BBB', title: 'My worst channel' }]"
+                no channel:
                   value: "[]"
       tags:
         - providers
