# server/src/main/deno/videos-provider/IVideosProvider.ts
@@ -3,4 +3,5 @@ import { Video } from "../../generated/deno-oak-server/models/Video.ts";
 
 export interface IVideosProvider {
     getVideosFromChannel(channel: Channel): Promise<Array<Video>>;
+    getChannels(channelName: string): Promise<Array<Channel>>;
 }
