# server/src/main/deno/videos-provider/impl/VideosProviderYoutubeImpl.ts
@@ -1,5 +1,6 @@
 import { YouTube } from "./deps.ts";
 import { IYoutubeVideo } from "../models/IYoutubeVideo.ts";
+import { IYoutubeChannel } from "../models/IYoutubeChannel.ts";
 
 export class VideosProviderYoutubeImpl {
     private youtubeApi: YouTube;
@@ -17,8 +18,23 @@ export class VideosProviderYoutubeImpl {
         });
         return Promise.resolve(videos.items);
     }
+
+    async getChannels(
+        channelName: string,
+    ): Promise<Array<IYoutubeChannel>> {
+        const channels: IChannelsListResult = await this.youtubeApi
+            .channels_list({
+                part: "snippet",
+                forUsername: channelName,
+            });
+        return Promise.resolve(channels.items);
+    }
 }
 
 interface ISearchListResult {
     items: Array<IYoutubeVideo>;
+}
+
+interface IChannelsListResult {
+    items: Array<IYoutubeChannel>;
 }
